--- a/custom_components/general_link/manifest.json
+++ b/custom_components/general_link/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://github.com/leonardlcl/general_link",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
-  "requirements": ["paho-mqtt==2.1.0"],
+  "requirements": [],
   "version": "v1.5.20",
   "zeroconf": ["_mqtt._tcp.local."]
 }
